--- a/graphql.html
+++ b/graphql.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/styles.css">
-    <script type="module" src="../static/js/user-info.js"></script>
+    <script type="module" src="../static/js/graphql.js"></script>
     <title>GraphQL</title>
 </head>
 <body>
